--- a/src/components/preloaders/circularPreloader.default.css
+++ b/src/components/preloaders/circularPreloader.default.css
@@ -15,7 +15,6 @@
     align-items: center;
     box-sizing: border-box;
     border-radius: 60%;
-    z-index: 1000;
 }
 
 .circularPreloader__mask {
@@ -45,7 +44,6 @@
     justify-content: center;
     margin: 0;
     padding: 0;
-    z-index: 1;
     width: 100%;
 }
 
