--- a/src/themes/default/utils/comboBox.css
+++ b/src/themes/default/utils/comboBox.css
@@ -13,6 +13,10 @@
     top: 100%;
     transition: var(--theme-transition);
     z-index: 100;
+
+    .listItem__title {
+        font-size: 1rem;
+    }
 }
 
 .comboBox--loading {
